# ds_envs

./: .envrc  .gitignore  Dockerfile  azureml_environment.yml  create_dataset.py  custom_modules.py  dashboard.py  docker_run.sh  nohup.out  prob_test.py  pyproject.toml  run_experiment.py  train.py  types_test.py
.devcontainer/: devcontainer.env  devcontainer.json
.dvc/: config
aml_config/: local-rc1.runconfig  project.json
data/: dataset.csv.dvc
ds_envs/cloud/: custom_modules.py  train.py
ds_envs/scripts/: create_dataset.py  create_environment.py  run_experiment.py  view_tensorboard.py
