[tool.poetry]
name = "ds_envs"
version = "2020.10.03"
description = "Data science environments"
authors = ["Mads Ehrhorn <meh@venzonxt.com>"]

[tool.poetry.dependencies]
python = "3.7.6"
numpy = "*"
pandas = "*"
plotly = "*"
streamlit = "*"
matplotlib = "*"
seaborn = "*"
dvc = "*"
tensorflow = "2.3.0"
GitPython = "*"
azure-common = "*"
azure-mgmt-resource = "*"
azure-mgmt-storage = "*"
azure-storage-blob = "*"
azure-cli-core = "*"
azure-identity = "*"
azure-keyvault = "*"
azureml-sdk = "*"
adal = "*"
msrestazure = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
